# azdopt

./: .gitignore  Cargo.toml  README.md  rustc-ice-2023-11-15T16_09_56-1078.txt  rustc-ice-2023-11-15T16_31_37-5922.txt  rustc-ice-2023-11-15T16_32_54-6267.txt  rustc-ice-2023-11-15T16_32_56-6308.txt  rustc-ice-2023-11-15T16_34_25-6780.txt  rustc-ice-2023-11-15T16_34_29-6822.txt  rustc-ice-2023-11-15T16_34_31-6863.txt
az-discrete-opt/: Cargo.toml
az-discrete-opt/src/: arr_map.rs  int_min_tree.rs  iq_min_tree.rs  ir_min_tree.rs  lib.rs  log.rs  state.rs
az-discrete-opt/src/az_model/: candle.rs  dfdx.rs  mod.rs
az-discrete-opt/src/int_min_tree/: mod.rs  simulate_once.rs  transition.rs  update.rs
az-discrete-opt/src/int_min_tree/state_data/: action_data.rs  mod.rs
az-discrete-opt/src/ir_tree/: ir_min_tree.rs  log.rs  mod.rs  stats.rs  transitions.rs
az-discrete-opt/src/learning_loop/: mod.rs  prediction.rs  state.rs  tree.rs
az-discrete-opt/src/nabla/: mod.rs
az-discrete-opt/src/nabla/model/: dfdx.rs  mod.rs
az-discrete-opt/src/nabla/model/dfdx/: cross_entropy.rs  masked_logits.rs  mod.rs  soft_label.rs
az-discrete-opt/src/nabla/optimizer/: mod.rs
az-discrete-opt/src/nabla/space/: mod.rs
az-discrete-opt/src/nabla/tree/: arc_weight.rs  empty_transitions.rs  find_path.rs  graph_operations.rs  graphviz.rs  mod.rs  next_action.rs  node.rs  search.rs  state_weight.rs  update_nodes.rs
az-discrete-opt/src/nabla/tree/node/: action.rs  mod.rs
az-discrete-opt/src/next_root/: mod.rs
az-discrete-opt/src/path/: mod.rs  multiset.rs  never_repeat.rs  ord_set.rs  sequence.rs  set.rs
az-discrete-opt/src/space/: axioms.rs  layered.rs  mod.rs  prohibited.rs  tests.rs
az-discrete-opt/src/state/: cost.rs  display.rs  exclude_previous_actions.rs  layers.rs  mod.rs  prohibit.rs  vec.rs
az-discrete-opt/src/tensorboard/: mod.rs
az-discrete-opt/src/tree_node/: mod.rs  prohibitions.rs
examples/: 01-r33.rs  02-r33.rs  03-r44.rs  04-r44.rs  0x.rs
graph-state/: Cargo.toml
graph-state/benches/: r44_17_search_tree_with_trivial_predictions.rs
graph-state/examples/: 01-r33.rs  01-r333-soft.rs  01-r333.rs  01-r44-grad.rs  02-r33.rs  02-r44.rs  03-r3333.rs  03-r44.rs  04-c21-tree.rs  04-r44 rs  04-r44.rs  05-ah rs  05-ah.rs  05-r45.rs  06-c21 rs  06-c21-tree.rs  06-c21.rs  07-c21-tree.rs
graph-state/pics/: README.md  de.py  environment.yaml  main.py  plot_graphs.py
graph-state/pics/src/: arguments.py  data.py  graph.py  plot_costs.py
graph-state/src/: achiche_hansen.rs  lib.rs  ramsey_state.rs
graph-state/src/achiche_hansen/: block_forest.rs  graph.rs  mod.rs  my_bitsets_to_refactor_later.rs  valid.rs
graph-state/src/bitset/: bitset.rs  display.rs  mod.rs  primitive.rs
graph-state/src/ramsey_counts/: display.rs  mod.rs  no_recolor.rs  space.rs
graph-state/src/rooted_tree/: mod.rs  modify_parent_once.rs  ordered_edge.rs  prohibited_space.rs  short_form.rs  space.rs  try_from.rs
graph-state/src/simple_graph/: edge.rs  mod.rs  neighborhoods.rs
graph-state/src/simple_graph/bitset_graph/: display.rs  graph6.rs  mod.rs  state.rs  try_from.rs
graph-state/src/simple_graph/bitset_graph/space/: action.rs
graph-state/src/simple_graph/connected_bitset_graph/: block.rs  display.rs  graph6.rs  mod.rs  state.rs  try_from.rs
graph-state/src/simple_graph/tree/: display.rs  mod.rs  prohibit.rs  sparse6.rs  state.rs
graph-state/src/simple_graph/tree/space/: action.rs  mod.rs  modify_any_entry.rs  modify_each_entry_once.rs  state.rs
grid-problem/: Cargo.toml
grid-problem/examples/: 01-3-line-mvp.rs
grid-problem/src/: lib.rs
ramsey/: Cargo.toml
ramsey/benches/: r44_17_search_tree_with_trivial_predictions.rs
ramsey/examples/: 02-r33.rs  03-r44.rs  04-r44.rs
ramsey/src/: lib.rs  ramsey_state.rs
src/: lib.rs
src/ir_tree/: config.rs  ir_min_tree.rs  mod.rs  model.rs  stats.rs
src/visible_reward/: config.rs  log.rs  mod.rs  stats.rs  transitions.rs
src/visible_tree/: config.rs  mod.rs
