[package]
name = "azopt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
dfdx = { version = "0.13.0", default-features = false, features = ["std", "fast-alloc", "cuda", "cudnn"]}
rand = "0.8.5"
rayon = "1.7.0"
ramsey = { workspace = true }

[workspace.dependencies]
ramsey = { version = "0.1.0", path = "ramsey/" }