[package]
name = "az-discrete-opt"
version = "0.1.0"
edition = "2021"

[features]
default = []
tensorboard = ["tensorboard-writer"]

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
dfdx = { version = "0.13.0", default-features = false, features = ["std", "fast-alloc", "cuda", "cudnn"]}
rayon = "1.8.0"
tensorboard-writer = { git = "https://github.com/wchargin/rust-tensorboard-writer", optional = true }


# [dependencies]


# [dev-dependencies]
# priority-queue = "1.3.2"
# rand = "0.8.5"
# rayon = "1.7.0"
# # ramsey = { workspace = true }
# bit-iter = "1.2.0"
# itertools = "0.11.0"

# [workspace.dependencies]
# ramsey = { version = "0.1.0", path = "ramsey/" }
