[package]
name = "graph-state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tensorboard = ["tensorboard-writer", "az-discrete-opt/tensorboard"]
dfdx-model = ["dfdx", "az-discrete-opt/dfdx"]
graphviz = ["az-discrete-opt/graphviz"]
dhat-heap = ["dhat"]

[dependencies]
bit-iter = "1.2.0"
rand = "0.8.5"
rand_distr = "0.4.3"
az-discrete-opt = { version = "0.1.0", path = "../az-discrete-opt", features = ["tensorboard"] }
itertools = "0.11.0"
num-traits = "0.2.17"
faer = "0.15.0"
tensorboard-writer = { git = "https://github.com/wchargin/rust-tensorboard-writer", optional = true }
dfdx = { version = "0.13.0", default-features = false, features = ["std", "fast-alloc", "cuda", "cudnn"], optional = true }
dhat = { version = "0.3.2", optional = true }

[dev-dependencies]
chrono = "0.4.31"
criterion = "0.5.1"
rayon = "1.7.0"
eyre = "0.6.8"

[[example]]
name = "01-r333"
required-features = ["dfdx-model", "tensorboard", "graphviz"]

[[example]]
name = "02-r44"
required-features = ["dfdx-model", "tensorboard", "graphviz"]

[[example]]
name = "03-r3333"
required-features = ["dfdx-model", "tensorboard", "graphviz"]

[[example]]
name = "04-c21-tree"
required-features = ["dfdx-model", "tensorboard", "graphviz"]

[[example]]
name = "05-r45"
required-features = ["dfdx-model", "tensorboard", "graphviz"]

[[bench]]
name = "r44_17_search_tree_with_trivial_predictions"
harness = false

[profile.release]
debug = 1
panic = 'abort'

[profile.dev]
panic = 'abort'
